# Hippo3D

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
source/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  ToolKit.cpp  ToolKit.h  Window.cpp  Window.h  main.cpp
source/context/: InputManager.cpp  InputManager.h  Window.cpp  Window.h
source/core/: Camera.cpp  Camera.h  Material.h  Mesh.cpp  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShaderProgram.cpp  Texture.cpp  Texture.h
source/examples/: App.cpp  App.h
source/gfx/renderer/: GL_impl.h  RenderFactory.cpp  RenderFactory.h  RenderUtility.h  Renderer.cpp  Renderer.h
source/gfx/scene/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h
source/gfx/shaders/: CMakeLists.txt  flat.frag.glsl  flat.vert.glsl  shaders.glsl  shaders.h
source/interface/: InputManager.cpp  InputManager.h  Window.cpp  Window.h
source/interface/controls/: FirstPersonControls.cpp  FirstPersonControls.h
source/interface/display/: Window.cpp  Window.h
source/interface/input/: InputManager.cpp  InputManager.h  Key.h
source/shaders/: .gitignore  CMakeLists.txt  flat.frag.glsl  flat.vert.glsl  shaders.h
tools/: mantis-spirv-cross  shader-export.py
